# family-assistant

./: .bazelrc  .build  .coverage  .dockerignore  .env  .env.test  .gitignore  .markdownlint.json  .mcp.json  .mdformat.toml  .pre-commit-config.yaml  .pylintrc  .yamlfmt  AGENTS.md  BUILD.bazel  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MODULE.bazel  README.md  REVIEW_GUIDELINES.md  SYMBOLS.md  aider.yaml  alembic.ini  analyze_tool_calls.py  calendar_integration.py  config.yaml  config.yaml.example  db_base.py  debug_logs.txt  debug_sse_test.py  defaults.yaml  email_storage.py  family_assistant.db-shm  family_assistant.db-wal  logging.conf  main.py  mcp_config.dev.json  (+19 more)
src/family_assistant/: BUILD.bazel  __init__.py  __main__.py  actions.py  assistant.py  calendar_integration.py  config_loader.py  config_models.py  config_sources.py  constants.py  context_providers.py  embeddings.py  home_assistant_shared.py  home_assistant_wrapper.py  interfaces.py  llm.py  main.py  paths.py  processing.py  similarity.py  task_worker.py  telegram_bot.py  tool_types.py  tools.py  web_server.py
src/family_assistant/a2a/: __init__.py  converters.py  types.py
src/family_assistant/camera/: __init__.py  fake.py  protocol.py  reolink.py
src/family_assistant/events/: BUILD.bazel  __init__.py  condition_evaluator.py  home_assistant_source.py  indexing_source.py  processor.py  sources.py  storage.py  validation.py  webhook_source.py
src/family_assistant/indexing/: BUILD.bazel  document_indexer.py  email_indexer.py  ingestion.py  notes_indexer.py  pipeline.py  tasks.py  types.py
src/family_assistant/llm/: BUILD.bazel  __init__.py  base.py  content_parts.py  factory.py  google_types.py  messages.py  one_shot.py  request_buffer.py  retrying_client.py  tool_call.py
src/family_assistant/scripting/: BUILD.bazel  __init__.py  config.py  engine.py  errors.py  monty_engine.py
src/family_assistant/services/: __init__.py  attachment_registry.py  attachments.py  push_notification.py  worker_backend.py
src/family_assistant/skills/: __init__.py  frontmatter.py  loader.py  registry.py  types.py
src/family_assistant/sms/: interface.py  protocol.py  service.py
src/family_assistant/storage/: BUILD.bazel  __init__.py  api_tokens.py  base.py  context.py  datetime_utils.py  email.py  error_logs.py  events.py  message_history.py  models.py  notes.py  push_subscription.py  schedule_automations.py  tasks.py  testing.py  types.py  vector.py  vector_search.py
src/family_assistant/telegram/: __init__.py  batching.py  handler.py  interface.py  markdown_utils.py  protocols.py  service.py  types.py  ui.py
src/family_assistant/templates/: base.html  base.html.j2  chat_conversations.html.j2  context_viewer.html.j2  doc_page.html  doc_page.html.j2  document_detail.html.html.j2  document_detail.html.j2  document_upload.html  document_upload.html.j2  documents_list.html.j2  edit_note.html  edit_note.html.j2  error_detail.html  errors.html  index.html  index.html.j2  message_history.html  message_history.html.j2  tasks.html  tasks.html.j2  tools.html  tools.html.j2  vector_search.html  vector_search.html.html.j2  vector_search.html.j2
src/family_assistant/testing/: BUILD.bazel  __init__.py  helpers.py
src/family_assistant/tools/: BUILD.bazel  CLAUDE.md  README.md  __init__.py  attachment_utils.py  attachments.py  automations.py  calendar.py  camera.py  communication.py  computer_use.py  confirmation.py  data_manipulation.py  data_visualization.py  database.py  documents.py  engineering.py  event_listeners.py  events.py  execute_script.py  github.py  home_assistant.py  image_backends.py  image_generation.py  image_tools.py  infrastructure.py  mcp.py  media_download.py  mock_image_tools.py  notes.py  schema.py  services.py  source_code.py  source_reader.py  tasks.py  types.py  video_generation.py  worker.py  workspace_files.py
src/family_assistant/utils/: BUILD.bazel  __init__.py  clock.py  logging_handler.py  scraping.py  stealth_browser.py  workspace.py
src/family_assistant/web/: BUILD.bazel  CLAUDE.md  README.md  app_creator.py  audio_utils.py  auth.py  confirmation_manager.py  dependencies.py  message_notifier.py  models.py  template_utils.py  utils.py  voice_client.py  web_chat_interface.py
tests/functional/: BUILD.bazel  __init__.py  conftest.py  test_action_management.py  test_api_endpoints.py  test_attachment_id_injection.py  test_attachment_tools.py  test_attachment_workflows.py  test_calendar_confirmation.py  test_calendar_integration.py  test_data_manipulation_tools.py  test_delegation.py  test_document_indexing.py  test_email_indexing.py  test_error_logging.py  test_event_listener_crud.py  test_event_listener_script_tools.py  test_event_listener_validation.py  test_event_script_integration.py  test_event_system.py  test_home_assistant_camera_tool.py  test_home_assistant_history_tool.py  test_home_assistant_reconnection.py  test_home_assistant_template_tool.py  test_image_generation_integration.py  test_include_system_docs.py  test_mcp_integration.py  test_note_tools.py  test_notes_context_provider.py  test_notes_prompt_inclusion.py  test_processing_profiles.py  test_push_api.py  test_recurring_task_timezone.py  test_scheduled_script_execution.py  test_script_attachment_api.py  test_script_execution_handler.py  test_script_execution_simple.py  test_script_wake_llm.py  test_smoke_callback.py  test_smoke_notes.py  (+6 more)
tests/functional/attachments/: test_attachment_id_injection.py  test_attachment_tools.py  (+2 more)
tests/unit/: BUILD.bazel  test_a2a_converters.py  test_attachment_security_boundaries.py  test_calendar_config_from_context.py  test_config_loader.py  test_config_loading.py  test_embeddings.py  test_event_match_conditions.py  test_event_source_deduplication.py  test_get_attachment_info_tool.py  test_image_generation_tools.py  test_llm_multimodal_processing.py  test_multimodal_tool_results.py  test_paths.py  test_processing_history_formatting.py  test_processing_multimodal_integration.py  test_push_notification_service.py  test_sms.py  test_tools_infrastructure.py
(+1197 files in other folders)
