[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-assistant"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # TODO: Update author info
]
description = "A family assistant bot using Telegram, LLMs, and background tasks."
readme = "README.md" # Assuming you might create one later
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose your license
    "Operating System :: OS Independent",
]
# Dependencies migrated from requirements.txt
dependencies = [
    "python-telegram-bot[ext]>=21.0,<22.0", # Use [ext] instead of [job-queue] for v21+
    "litellm>=1.38.1,<1.67.3",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0", # Async driver for SQLite (default)
    "asyncpg>=0.29.0", # Async driver for PostgreSQL (optional)
    "pgvector>=0.2.0", # For vector storage in PostgreSQL (optional)
    # "apscheduler>=3.10.0", # APScheduler seems unused now? Remove if not needed.
    "PyYAML>=6.0", # For loading prompts.yaml
    "fastapi>=0.111.0", # Web framework
    "uvicorn[standard]>=0.29.0", # ASGI server
    "jinja2>=3.1.4", # HTML templating
    "python-multipart", # Required by FastAPI for form data
    "mcp>=1.5.0", # Model Context Protocol SDK
    "caldav>=1.2.0", # CalDAV client library
    "vobject>=0.9.6", # For parsing VCALENDAR data
    "httpx>=0.27.0", # For fetching iCal URLs asynchronously
    "telegramify-markdown>=0.5.1", # For converting Markdown to Telegram MarkdownV2
    "python-dateutil==2.9.0", # For robust datetime parsing
    "pytz>=2024.1", # For timezone handling
    "aiofiles>=23.2.1", # For async file operations (LLM recording/playback)
    "sentence-transformers>=2.7.0", # For local embeddings (optional install)
    "torch>=2.0.0", # Dependency for sentence-transformers
    "numpy>=1.26.0", # Dependency for sentence-transformers and pgvector
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",         # Add async SQLite driver for testing
    "httpx",             # Add HTTP client for future API tests
    "pytest-mock",       # Add mocking library (or use unittest.mock)
    "testcontainers[postgres]>=3.7.1", # Add testcontainers with postgres extra
    "asyncpg>=0.29.0",   # Ensure asyncpg is explicitly in dev dependencies
    "psycopg-binary>=3.1.0", # Add PostgreSQL driver (binary version for ease) - keep for now, might be needed by testcontainers itself?
    "pylint>=3.0.0", # Moved pylint here
    # "ruff", # Consider adding ruff later if desired
    "poethepoet>=0.11.0", # Add poe the poet task runner
    "symbex>=2.0",         # Add symbex
]

[project.scripts]
family-assistant = "family_assistant.main:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/family-assistant" # TODO: Update URL
"Bug Tracker" = "https://github.com/yourusername/family-assistant/issues" # TODO: Update URL


# --- Setuptools Configuration ---
[tool.setuptools]
# Include files specified in MANIFEST.in or via package_data/include_package_data
# We'll use package_data below. Setting this true is good practice.
include-package-data = true

[tool.setuptools.package-data]
# Specify that the 'family_assistant' package should include
# all files within its 'templates' and 'static' subdirectories.
family_assistant = ["templates/**/*", "static/**/*"]


# --- Task Runner Configuration (poethepoet) ---
[tool.poe.tasks.symbols]
help = "Generate SYMBOLS.md map using symbex"
# Runs symbex on the 'family_assistant' module, includes docstrings,
# suppresses file path comments (-n), includes import statements (-i),
# and saves the output to SYMBOLS.md using shell redirection.
shell = "symbex -m family_assistant --docs -ni > SYMBOLS.md"

[tool.poe.tasks.test]
help = "Run pylint in errors-only mode and full pytest suite with verbose output"
shell = "pylint src --errors-only && pytest -s -v tests"


# --- Tool Configuration (Example: Ruff) ---
# [tool.ruff]
# line-length = 88
# select = ["E", "F", "W", "I", "UP", "PL", "T20"] # Example rule set
# ignore = []

# [tool.ruff.lint.isort]
# known-first-party = ["family_assistant"]

# [tool.pytest.ini_options]
# asyncio_mode = "auto"
# testpaths = [
#     "tests", # Assuming tests will be in a top-level tests/ directory
# ]
