[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-assistant"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # TODO: Update author info
]
description = "A family assistant bot using Telegram, LLMs, and background tasks."
readme = "README.md" # Assuming you might create one later
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose your license
    "Operating System :: OS Independent",
]
# Dependencies migrated from requirements.txt
dependencies = [
    "python-telegram-bot[ext]>=21.0,<22.0", # Use [ext] instead of [job-queue] for v21+
    "litellm>=1.38.1,<1.67.3",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0", # Async driver for SQLite (default)
    "asyncpg>=0.29.0", # Async driver for PostgreSQL (optional)
    "pgvector>=0.2.0", # For vector storage in PostgreSQL (optional)
    "json-schema-for-humans>=0.53.10", # For rendering JSON schemas as HTML
    # "apscheduler>=3.10.0", # APScheduler seems unused now? Remove if not needed.
    "PyYAML>=6.0", # For loading prompts.yaml
    "fastapi>=0.111.0", # Web framework
    "uvicorn[standard]>=0.29.0", # ASGI server
    "jinja2>=3.1.4", # HTML templating
    "python-multipart", # Required by FastAPI for form data
    "mcp>=1.5.0", # Model Context Protocol SDK
    "caldav>=1.2.0", # CalDAV client library
    "vobject>=0.9.6", # For parsing VCALENDAR data
    "httpx>=0.27.0", # For fetching iCal URLs asynchronously
    "telegramify-markdown>=0.5.1", # For converting Markdown to Telegram MarkdownV2
    "python-dateutil>=2.9.0", # For robust datetime parsing (version updated)
    "markdown-it-py>=3.0.0", # For rendering Markdown in web server
    "mdit-py-plugins>=0.4.0", # Common plugins for markdown-it-py
    "linkify-it-py>=2.0.0", # Required by markdown-it-py for linkify feature
    "markitdown[all]>=0.1.1", # For converting PDF to Markdown
    "pytz>=2024.1", # For timezone handling
    "aiofiles>=23.2.1", # For async file operations (LLM recording/playback)
    "torch>=2.0.0", # Dependency for sentence-transformers
    "Authlib>=1.3.1", # For OIDC authentication
    "itsdangerous>=2.1.0", # Dependency for signing session cookies (used by Starlette SessionMiddleware)
    "passlib[bcrypt]>=1.7", # For hashing and verifying API tokens
    "numpy>=1.26.0", # Dependency for sentence-transformers and pgvector
    "alembic>=1.15.2",
    "filetype>=1.2.0", # For detecting file types
    "playwright>=1.40.0", # For web scraping and JS rendering
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "assertpy>=1.1", # Add assertpy
    "pytest-mock",
    "testcontainers[postgres]>=3.7.1",
    "asyncpg>=0.29.0",
    "types-aiofiles",
    "types-assertpy", # Added
    "types-docker", # Added
    "types-passlib",
    "types-python-dateutil",
    "types-PyYAML",
    "types-pytz",
    "types-vobject",
    "psycopg-binary>=3.1.0",
    "httpx>=0.27.0",
    "pylint>=3.0.0",
    "poethepoet>=0.11.0",
    "sentence-transformers>=2.7.0",
    "mcp-proxy>=0.3.0", # Added for testing SSE transport
    "mcp-server-time>=0.1.0", # Ensure mcp-server-time is available for tests
    "symbex>=2.0",
    "pytest-timeout",
    "ruff",
    "black",
    "pre-commit>=4.2.0",
    "pyright",
]

[project.scripts]
family-assistant = "family_assistant.__main__:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/family-assistant" # TODO: Update URL
"Bug Tracker" = "https://github.com/yourusername/family-assistant/issues" # TODO: Update URL


# --- Setuptools Configuration ---
[tool.setuptools]
# Include files specified in MANIFEST.in or via package_data/include_package_data
# We'll use package_data below. Setting this true is good practice.
include-package-data = true

[tool.setuptools.package-data]
# Specify that the 'family_assistant' package should include
# all files within its 'templates' and 'static' subdirectories.
family_assistant = ["templates/**/*", "static/**/*", "py.typed"]


# --- Task Runner Configuration (poethepoet) ---
[tool.poe.tasks.symbols]
help = "Generate SYMBOLS.md map using symbex"
# Runs symbex on the 'family_assistant' module, includes docstrings,
# suppresses file path comments (-n), includes import statements (-i),
# and saves the output to SYMBOLS.md using shell redirection.
shell = "symbex -m family_assistant --docs -ni > SYMBOLS.md"

[tool.poe.tasks.test]
help = "Run pylint in errors-only mode and full pytest suite with verbose output"
shell = "scripts/format-and-lint.sh && pytest -s -v tests"


[tool.ruff.lint.isort]
known-first-party = ["family_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]

[tool.pylint.main]
source-roots = ["src", "."]

[tool.pydantic]
# Enable Pydantic v2 behaviors
validate_default = false
validate_assignment = false
frozen = false
use_enum_values = false
arbitrary_types_allowed = false
from_attributes = true

# Set type validation strictness
strict = false

[tool.ruff]
extend-exclude = ["alembic/**", "docs/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Type annotations
    "ANN",
    # Commented out code
    "ERA",
    # FastAPI
    "FAST",
    # Type Checking
    "TC",
]
ignore = [
	# Line length - fornatter can deal with it
	"E501",
	# Forbids dynamic types in kwargs etc
	"ANN4"
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "alembic/**",
    "docs/**",
    "contrib/**",
]
pythonVersion = "3.10"
extraPaths = ["src"] # Add src to the import search paths

reportMissingImports = true
reportUnusedImport = true
typeCheckingMode = "basic"
