[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "family-assistant"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # TODO: Update author info
]
description = "A family assistant bot using Telegram, LLMs, and background tasks."
readme = "README.md" # Assuming you might create one later
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # TODO: Choose your license
    "Operating System :: OS Independent",
]
# Dependencies migrated from requirements.txt
dependencies = [
    "python-telegram-bot[ext]>=21.0,<22.0",
    # Use [ext] instead of [job-queue] for v21+
    "litellm>=1.75.0",
    # Direct provider SDKs
    "openai>=1.0.0,<1.93.0",
    # OpenAI SDK for direct API access
    "google-genai>=0.4.0",
    # Google Gemini SDK for direct API access
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    # Async driver for SQLite (default)
    "asyncpg>=0.29.0",
    # Async driver for PostgreSQL (optional)
    "pgvector>=0.2.0",
    # For vector storage in PostgreSQL (optional)
    "json-schema-for-humans>=0.53.10",
    # For rendering JSON schemas as HTML
    # "apscheduler>=3.10.0", # APScheduler seems unused now? Remove if not needed.
    "PyYAML>=6.0",
    # For loading prompts.yaml
    "fastapi>=0.111.0",
    # Web framework
    "uvicorn[standard]>=0.29.0",
    # ASGI server
    "jinja2>=3.1.4",
    # HTML templating
    "python-multipart",
    # Required by FastAPI for form data
    "mcp>=1.6.0",
    # Model Context Protocol SDK
    "caldav>=1.2.0",
    # CalDAV client library
    "vobject>=0.9.6",
    # For parsing VCALENDAR data
    "httpx>=0.27.0",
    # For fetching iCal URLs asynchronously
    "telegramify-markdown>=0.5.1",
    # For converting Markdown to Telegram MarkdownV2
    "python-dateutil>=2.9.0",
    # For robust datetime parsing (version updated)
    "markdown-it-py>=3.0.0",
    # For rendering Markdown in web server
    "mdit-py-plugins>=0.4.0",
    # Common plugins for markdown-it-py
    "linkify-it-py>=2.0.0",
    # Required by markdown-it-py for linkify feature
    "markitdown[all]>=0.1.1",
    # For converting PDF to Markdown
    "pytz>=2024.1",
    # For timezone handling
    "aiofiles>=23.2.1",
    # For async file operations (LLM recording/playback)
    "passlib[bcrypt]>=1.7.4",
    # For password hashing in tests
    "Authlib>=1.3.1",
    # For OIDC authentication
    "itsdangerous>=2.1.0",
    # Dependency for signing session cookies (used by Starlette SessionMiddleware)
    "passlib[bcrypt]>=1.7",
    # For hashing and verifying API tokens
    "numpy>=1.26.0",
    # Required by pgvector for PostgreSQL vector operations
    "alembic>=1.15.2",
    "filetype>=1.2.0",
    # For detecting file types
    "playwright==1.55.0",
    # For web scraping and JS rendering
    "starlark-pyo3>=0.1.0",
    # For Starlark scripting language support
    "homeassistant-api>=5.0.0",
    # For Home Assistant integration
    "janus>=1.0.0",
    # For thread-safe asyncio-aware queue
    "llm>=0.27.1",
    "backoff>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-flakefinder>=1.1.0",
    "pytest-recording>=0.13.0",  # VCR.py integration for pytest
    "pytest-xdist>=3.8.0",  # Parallel test execution
    "vcrpy>=7.0.0",  # HTTP record/replay for testing - v7 fixes urllib3 conflicts
    "aiosqlite",
    "assertpy>=1.1", # Add assertpy
    "pytest-mock",
    "testcontainers[postgres]>=3.7.1",
    "asyncpg>=0.29.0",
    "types-aiofiles",
    "types-assertpy", # Added
    # "types-docker", # Temporarily commented out due to urllib3 conflict with vcrpy
    "types-passlib",
    "types-python-dateutil",
    "types-PyYAML",
    "types-pytz",
    "types-vobject",
    "psycopg-binary>=3.1.0",
    "httpx>=0.27.0",
    "pylint>=3.0.0",
    "poethepoet>=0.11.0",
    "mcp-proxy>=0.3.0", # Added for testing SSE transport
    "mcp-server-time>=0.1.0", # Ensure mcp-server-time is available for tests
    "radicale>=3",
    "symbex>=2.0",
    "pytest-timeout",
    "pytest-json-report",
    "pytest-alembic>=0.11.0",
    "ruff",
    "pre-commit>=4.2.0",
    "basedpyright",
    "pytype",
    "mdformat>=0.7.17",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=2.0.0",
    "mdformat-tables>=0.4.1",
    "llm>=0.26.0",
    "llm-gemini>=0.23.0",
    "llm-openrouter>=0.4.1",
    "llm-fragments-github>=0.4.0",
    "hupper>=1.12.1",
    "watchdog>=3.0.0",
    "pytest-playwright-asyncio>=0.2.0"
]
local-embeddings = [
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
]

[project.scripts]
family-assistant = "family_assistant.__main__:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/family-assistant" # TODO: Update URL
"Bug Tracker" = "https://github.com/yourusername/family-assistant/issues" # TODO: Update URL


# --- Setuptools Configuration ---
[tool.setuptools]
# Include files specified in MANIFEST.in or via package_data/include_package_data
# We'll use package_data below. Setting this true is good practice.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Specify that the 'family_assistant' package should include
# all files within its 'templates' and 'static' subdirectories.
family_assistant = ["templates/**/*", "static/**/*", "py.typed"]


# --- Task Runner Configuration (poethepoet) ---
[tool.poe.tasks.symbols]
help = "Generate SYMBOLS.md map using symbex"
# Runs symbex on the 'family_assistant' module, includes docstrings,
# suppresses file path comments (-n), includes import statements (-i),
# and saves the output to SYMBOLS.md using shell redirection.
shell = "symbex -m family_assistant --docs -ni > SYMBOLS.md"

[tool.poe.tasks.lint]
help = "Run full linting suite with parallel execution"
shell = "scripts/format-and-lint.sh"

[tool.poe.tasks.lint-fast]
help = "Run only fast linting checks (ruff) - completes in ~1 second"
shell = "scripts/format-and-lint.sh --fast"

[tool.poe.tasks.format]
help = "Format code (ruff format + mdformat)"
shell = """
${VIRTUAL_ENV:-.venv}/bin/ruff format --preview src tests && \
if command -v ${VIRTUAL_ENV:-.venv}/bin/mdformat >/dev/null 2>&1; then \
    find . -name "*.md" \
        -not -path "./.venv/*" \
        -not -path "./venv/*" \
        -not -path "./.git/*" \
        -not -path "./node_modules/*" \
        -not -path "./docs/python-telegram-bot-abridged.md" \
        -not -path "./docs/python-telegram-bot-abridged-filtered.md" \
        2>/dev/null | \
    xargs ${VIRTUAL_ENV:-.venv}/bin/mdformat --wrap 100 2>/dev/null || true; \
fi
"""

[tool.poe.tasks.test]
help = "Run linting and tests with smart parallel execution"
cmd = "scripts/run-tests.sh"

[tool.poe.tasks.test-postgres]
help = "Run tests with PostgreSQL database backend"
cmd = "scripts/run-tests.sh --skip-lint --db postgres -xq"

[tool.poe.tasks.test-postgres-verbose]
help = "Run tests with PostgreSQL database backend (verbose output)"
cmd = "scripts/run-tests.sh --skip-lint --db postgres -xvs"

[tool.poe.tasks.test-sqlite]
help = "Run tests with SQLite database backend only"
cmd = "scripts/run-tests.sh --skip-lint --db sqlite -m 'not postgres' -xq"

[tool.poe.tasks.ui-dev]
help = "Run Vite development server for frontend"
shell = "npm run --prefix frontend dev"

[tool.poe.tasks.ui-build]
help = "Build production frontend assets with Vite"
shell = "npm run --prefix frontend build"

[tool.poe.tasks.serve]
help = "Run the full application (without Telegram)"
shell = "DEV_MODE=false TELEGRAM_ENABLED=false GEMINI_API_KEY=${GEMINI_API_KEY:-dev-key} python -m family_assistant"

[tool.poe.tasks.serve-reload]
help = "Run the full application with auto-reload using hupper"
shell = "DEV_MODE=false TELEGRAM_ENABLED=false GEMINI_API_KEY=${GEMINI_API_KEY:-dev-key} hupper -m family_assistant -w config.yaml -w prompts.yaml"

[tool.poe.tasks.dev]
help = "Run backend and frontend servers concurrently (access app at http://localhost:5173 or http://<your-ip>:5173)"
sequence = [
    { shell = "echo '🚀 Starting development servers...'" },
    { shell = "echo ''" },
    { shell = "echo '📱 Access the app at:'" },
    { shell = "echo '   - Local: http://localhost:5173'" },
    { shell = "echo '   - Remote: http://<your-ip>:5173'" },
    { shell = "echo ''" },
    { shell = "echo '🔄 Development features:'" },
    { shell = "echo '   - Backend API on port 8000 with auto-reload (hupper)'" },
    { shell = "echo '   - Vite dev server on port 5173 (main entry point)'" },
    { shell = "echo '   - Both servers listening on 0.0.0.0 for remote access'" },
    { shell = "echo '   - Auto-reloads on Python code and config file changes'" },
    { shell = "echo ''" },
    { shell = "echo 'Press Ctrl+C to stop'" },
    { shell = "trap 'echo \"\\n🛑 Stopping servers...\"; exit' INT; (DEV_MODE=true poe serve-reload & poe ui-dev & wait)" }
]

[tool.poe.tasks.frontend-lint]
help = "Lint frontend JavaScript/TypeScript code"
shell = "cd frontend && npm run lint"

[tool.poe.tasks.frontend-lint-fix]
help = "Lint and fix frontend JavaScript/TypeScript code"
shell = "cd frontend && npm run lint:fix"

[tool.poe.tasks.frontend-format]
help = "Format frontend code with Biome"
shell = "cd frontend && npm run format"

[tool.poe.tasks.frontend-check]
help = "Check frontend code formatting and linting without fixing"
shell = "cd frontend && npm run check"

[tool.poe.tasks.format-and-lint]
help = "Format and lint both Python and JavaScript/TypeScript code"
shell = "scripts/format-and-lint.sh"


[tool.ruff.lint.isort]
known-first-party = ["family_assistant"]



[tool.pylint.main]
source-roots = ["src", "."]

[tool.pydantic]
# Enable Pydantic v2 behaviors
validate_default = false
validate_assignment = false
frozen = false
use_enum_values = false
arbitrary_types_allowed = false
from_attributes = true

# Set type validation strictness
strict = false

[tool.ruff]
extend-exclude = ["alembic/**", "docs/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Type annotations
    "ANN",
    # Commented out code
    "ERA",
    # FastAPI
    "FAST",
    # Type Checking
    "TC",
]
ignore = [
	# Line length - fornatter can deal with it
	"E501",
	# Forbids dynamic types in kwargs etc
	"ANN4"
]

[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    ".venv",
    "venv",
    "alembic/**",
    "docs/**",
    "contrib/**",
]
extraPaths = ["src"] # Add src to the import search paths

reportMissingImports = true
reportUnusedImport = true

typeCheckingMode = "basic"


[tool.uv]
dev-dependencies = [
    "llm-fragments-github>=0.4",
    "llm-fragments-reader>=0.1",
    "pytest-xdist>=3.7.0",
]

